# sit-bus-py

./: README.md  pyproject.toml
src/sitbus/: __init__.py  data.json  sitbus.py  utils.py
tests/: test_get_next_bus.py
