[project]
name = "sitbus"
version = "0.1.0"
description = "SIT bus API client implemented in Python"
authors = [
    { name = "2gn", email = "101851090+2gn@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sitbus"]
